# open-football

./: .gitignore  package.json  parallel-agents.md  pnpm-workspace.yaml
.claude/skills/football-manager-ai/: SKILL.md
.claude/skills/football-manager-ai/examples/: unhappy-player-conversation.md
.claude/skills/football-manager-ai/prompts/: system.md
.claude/skills/football-manager-ai/prompts/characters/: journalist.md  player-unhappy.md
bridge/: package.json
bridge/src/: index.ts  server.ts
bridge/src/middleware/: auth.ts
bridge/src/routes/: agent.ts  conversation.ts  game.ts
bridge/src/services/: bridgeState.ts  observationBuilder.ts  rustClient.ts
src/core/: Cargo.toml
src/core/src/league/storages/: match_storage.rs
src/neural/: Cargo.toml
src/server/src/: lib.rs  routes.rs
src/server/src/events/: mod.rs  recent.rs  routes.rs
src/server/src/player/: mod.rs  routes.rs  state.rs
src/server/src/teams/: ai_state.rs  mod.rs  routes.rs  squad_state.rs
ui-react/: index.html  package.json  tailwind.config.js
ui-react/src/: App.tsx
ui-react/src/components/layout/: Layout.tsx
ui-react/src/routes/: conversation.tsx  inbox.tsx  index.tsx  squad.tsx
