[package]
name = "core"
version = "0.1.0"
authors = ["ZOXEXIVO <zoxexivo@gmail.com>"]
edition = "2024"

[dependencies]
neural = { path = "../neural" }
chrono = "0.4.42"
rand = "0.9.2"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
log = "0.4.29"
itertools = "0.14.0"
nalgebra = { version = "0.33", features = ["serde-serialize", "rand"] }

[profile.release]
opt-level = 3          # Highest optimization for speed (default in release, but explicit is fine).
lto = "fat"            # Enables full link-time optimization for better inlining and dead code elimination across crates.
codegen-units = 1      # Reduces parallelism in codegen to allow more aggressive optimizations (increases compile time).
panic = "abort"        # Aborts on panic instead of unwinding, reducing overhead and binary size.
strip = "symbols"      # Strips debug symbols and unused code for a leaner binary.
